fix: rebuild persisted index state and migrate nested manifests